--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -117,7 +117,7 @@ http://www.templatemo.com/tm-501-neaty
                                 <header><h2 class="tm-blue-text tm-section-title tm-margin-b-30">Документи</h2></header>
                                 <div class="tm-gallery-container tm-gallery-2">
                                     <div class="tm-img-container tm-img-container-2">
-                                        <a href="img/neaty-08.jpg"><img src="img/neaty-08.jpg" alt="Image" class="img-fluid tm-img-tn"></a
+                                        <a href="img/neaty-08.jpg"><img src="img/neaty-08.jpg" alt="Image" class="img-fluid tm-img-tn"></a>
                                     </div>
                                     <div class="tm-img-container tm-img-container-2">
                                         <a href="img/neaty-09.jpg"><img src="img/neaty-09.jpg" alt="Image" class="img-fluid tm-img-tn"></a>
