update docs+fix errors

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,7 +69,7 @@ http://www.templatemo.com/tm-501-neaty
                                 <header>
                                     <h2 class="tm-blue-text tm-welcome-title tm-margin-b-45">Вітаємо на сайті. Загальна інформація</h2>
                                 </header>
-                                <p>Ви знаходитесь на офіційному сайті імпортера лікарського засобу DFC.Нижче ви можете отримати всю необхідну інформацію та звязатися з нами.Що таке DFC? DFС – крем для діабетиків, який легко засвоюється, має спеціальну формулу, яка допомагає вирішити проблему ніг (стоп) та рук шляхом посилення кровообігу та його антибактеріальним, цілющим та пом’якшувальним ефектами.
+                                <p>Ви знаходитесь на офіційному сайті імпортера лікарського засобу DFC. Нижче ви можете отримати всю необхідну інформацію та звязатися з нами. Що таке DFC? DFС – крем для діабетиків, який легко засвоюється, має спеціальну формулу, яка допомагає вирішити проблему ніг (стоп) та рук шляхом посилення кровообігу та його антибактеріальним, цілющим та пом’якшувальним ефектами.
 Зволожує та усуіває тріснуту та суху шкіру. Допомагає зігріти холодні ноги, зберігаючи їх розслабленими. Надає ногам відчуття комфорту. Має цілющий ефект, що  особливо підтверджений при виразці діабетичної стопи. Запобігає розмноженню мікробів та подальшому  поширюванню запалення. Може вкористовуватися для пацієнтів всіх категорій.</p>
                             </section>
                             <!-- About section -->
@@ -125,6 +125,11 @@ http://www.templatemo.com/tm-501-neaty
                                     <div class="tm-img-container tm-img-container-2">
                                         <a href="img/neaty-10.jpg"><img src="img/neaty-10.jpg" alt="Image" class="img-fluid tm-img-tn"></a>
                                     </div>
+                                    <div class="tm-img-container tm-img-container-2">
+                                        <a href="img/neaty-20.jpg"><img src="img/neaty-20.jpg" alt="Image" class="img-fluid tm-img-tn"></a>
+                                    </div>
+                                    <p>Засіб зареєстрованно Європейскому союзі та внесенно в реєстр лікарських засобів під номером 2663672 від 2018.0.05</p>
+                                    <p><a href="img/DFC - Risk Management-3.pdf" target="_blank">Звіт про клінічні випробування(Для перегляду відкрийте посилання в новому вікні)</a></p>
                                 </div>
                             </section>
 
@@ -135,7 +140,7 @@ http://www.templatemo.com/tm-501-neaty
                                     <div class="tm-img-container tm-img-container-3">
                                     <p>Виробник: Amman - Jordan. «Сана фарма» 144 Amman 11934 Jordan.</p>
 <p>Імпортер: ФОП Мігалко В.Ю. 90575, СМТ. Солотвино, вул. Тячівська, будинок 58. Тячівський район, Закарпатська обл., Україна. Тел: +380931203174, +380677982100</p>
-<p>Зберигати при температурі не вище 300С. Термін придатності: 3 роки.</p>
+<p>Зберигати при температурі не вище 30С. Термін придатності: 3 роки.</p>
 
 
                                 </div>
