update docs+fix errors3

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@ http://www.templatemo.com/tm-501-neaty
                     <!-- Left column: logo and menu -->
                     <div class="tm-blue-bg tm-left-column">
                         <div class="tm-logo-div text-xs-center">
-                            <h1 class="tm-site-name">Senera</h1>
+                            <h1 class="tm-site-name">Senera.com.ua</h1>
                         </div>
                         <nav class="tm-main-nav">
                             <ul class="tm-main-nav-ul">
@@ -68,7 +68,7 @@ http://www.templatemo.com/tm-501-neaty
                                 <header>
                                     <h2 class="tm-blue-text tm-welcome-title tm-margin-b-45">Вітаємо на сайті. Загальна інформація</h2>
                                 </header>
-                                <p>Ви знаходитесь на офіційному сайті імпортера лікарського засобу DFC. Нижче ви можете отримати всю необхідну інформацію та звязатися з нами. Що таке DFC? DFС – крем для діабетиків, який легко засвоюється, має спеціальну формулу, яка допомагає вирішити проблему ніг (стоп) та рук шляхом посилення кровообігу та його антибактеріальним, цілющим та пом’якшувальним ефектами.
+                                <p>Ви знаходитесь на офіційному сайті імпортера косметично-профілактичного засобу DFC. Нижче ви можете отримати всю необхідну інформацію та звязатися з нами. Що таке DFC? DFС – крем для діабетиків, який легко засвоюється, має спеціальну формулу, яка допомагає вирішити проблему ніг (стоп) та рук шляхом посилення кровообігу та його антибактеріальним, цілющим та пом’якшувальним ефектами.
 Зволожує та усуіває тріснуту та суху шкіру. Допомагає зігріти холодні ноги, зберігаючи їх розслабленими. Надає ногам відчуття комфорту. Має цілющий ефект, що  особливо підтверджений при виразці діабетичної стопи. Запобігає розмноженню мікробів та подальшому  поширюванню запалення. Може вкористовуватися для пацієнтів всіх категорій.</p>
                             </section>
                             <!-- About section -->
@@ -140,6 +140,9 @@ http://www.templatemo.com/tm-501-neaty
                                     <p>Виробник: Amman - Jordan. «Сана фарма» 144 Amman 11934 Jordan.</p>
 <p>Імпортер: ФОП Мігалко В.Ю. 90575, СМТ. Солотвино, вул. Тячівська, будинок 58. Тячівський район, Закарпатська обл., Україна. Тел: +380931203174, +380677982100</p>
 <p>Зберигати при температурі не вище 30С. Термін придатності: 3 роки.</p>
+                                        <p>Формуємо диллерську мережу та запршуємо до співпраці.Нижче дано контакти представників по регіонах</p>
+                                        <p>0975842248 0508691783 Гузенко Оксана представник Київська Черкасська та Чернігівська</p><p>Анна 0999227795 Миколаївська</p><p>Валерий 0968738974 Одеська</p><p>Валерий 0667158003 Херсонська</p><p>Валерий 0931203174 Дніпропетровська</p><p>Василий 09677982100 Закарпатська</p>
+
 
 
                                 </div>
@@ -174,7 +177,7 @@ http://www.templatemo.com/tm-501-neaty
 
                             </section>
                             <footer>
-                                <p class="tm-copyright-p">Copyright &copy; <span class="tm-current-year">2019</span> Senera Farma
+                                <p class="tm-copyright-p">Copyright &copy; <span class="tm-current-year">2019</span> Senera Pharma
 
                                 | Designed by Skiner </p>
                             </footer>
