--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,7 +102,7 @@
 
 </h2>
 
-                           <p><a href="https://servler01.herokuapp.com/img/DFC%20-%20Risk%20Management-3.pdf">Звіт про клінічні випробування</a></p>
+                           <p><a href="images/DFC - Risk Management-3.pdf">Звіт про клінічні випробування</a></p>
 
                             
                             <h2>фото крему,висновків санітарної експертизи та використання</h2>
