--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,8 @@
 		<title>Senera Pharma UA | DFC </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Диабет, гипергликемия, язвы ног, незаживление язв, ампутация конечностей, Диабетические язвы стопы, невропатия конечностей, проблемы со стопами,
+болезнь перфорантных сосудов, язвы стопы, периферийная сенсорная невропатия, предотвращение ампутации ног, увлажнение стоп, поражение конечностей, сухость ног, Болезнь Рейно, холодные пальцы, изменение цвета кожи, онемение конечностей, онемение пальцев, замедление кровотока, потеря влаги, воспалительные процессы, улучшение кровотока, заживляющий эффект, успокаивающий эффект, антимикробный эффект, периферические заболевания, эндотециальная функция, заживление диабетических ран, диабетические раны, диабетическая стопа, микробная инфекция, противоопухолевый эффект, противовоспалительный эффект, антиоксидантный эффект, антибактериальный эффект, заживление язв, ускоряет заживление, кожные язвы,  ранозаживляющее свойство, увлажнение, костные мозоли, восстановление теплообмена, расслабляющий эффект, диабетические язвы стоп, глубокое увлажнение, расслабление стоп. Кровоток конечностей, ампутация пальцев, ампутация стоп, ампутация нижних конечностей, проблемы диабетиков, диабетик">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -60,7 +62,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Senera Pharma UA <br />
+								<h2 class="alt">Сенера Форма UA <br />
 								Офіційний імпортер крему DFC, косметично-профілактичног, діабетичного засобу для ніг.</h2>
 								<p>На нашому сайті ви отримаєте вичерпну інформацію про крем DFC<br />
 								Для отримання інформації про використання,зберігання та перегляду фото на тисніть кнопку "Дізнатись більше".</p>
